--- a/style.css
+++ b/style.css
@@ -168,3 +168,21 @@ button[disabled] {
 #error {
   color: hsl(360, 91%, 36%);
 }
+
+.copy {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 69%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* prevent interception of mouse click events */
+  pointer-events: none;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.8s;
+}
