--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ button[disabled] {
 }
 
 .copy {
+  color: hsl(206deg 17% 18% / 44%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -182,9 +183,20 @@ button[disabled] {
   pointer-events: none;
 }
 
+#copyresult {
+  margin-top: 4px;
+  background-color: #0ebd0e;
+  color: #ffffff;
+  padding: 6px;
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 20px;
+  border-color: #297a29;
+}
+
 .fade-out {
   opacity: 0;
-  transition: opacity 0.8s;
+  transition: opacity 1.2s;
 }
 
 .invisible {
