--- a/css/style.css
+++ b/css/style.css
@@ -185,13 +185,13 @@ button[disabled] {
 
 #copyresult {
   margin-top: 4px;
-  background-color: #0ebd0e;
+  background-color: #28a7289e;
   color: #ffffff;
   padding: 6px;
   border-style: solid;
   border-width: 3px;
   border-radius: 20px;
-  border-color: #297a29;
+  border-color: #ccf3cc9e;
 }
 
 .fade-out {
