--- a/css/style.css
+++ b/css/style.css
@@ -184,14 +184,12 @@ button[disabled] {
 }
 
 #copyresult {
-  margin-top: 4px;
   background-color: #28a7289e;
   color: #ffffff;
-  padding: 6px;
-  border-style: solid;
-  border-width: 3px;
-  border-radius: 20px;
-  border-color: #ccf3cc9e;
+  margin-top: 3px;
+  width: 48px;
+  height: 48px;
+  border-radius: 100px;
 }
 
 .fade-out {
