Downmixed CSS colors that didn't need alpha; removed unused CSS properties

--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,7 @@ button[disabled] {
 }
 
 #copyresult {
-  background-color: #28a7289e;
-  color: #ffffff;
+  background-color: #7ac87a;
   margin-top: 3px;
   width: 48px;
   height: 48px;
