--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ button[disabled] {
 }
 
 .copy {
-  color: hsl(206deg 17% 18% / 44%);
+  color: #99a1a7;
   display: flex;
   flex-direction: column;
   align-items: center;
