--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ button[disabled] {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 69%;
+  top: 54%;
   left: 50%;
   transform: translate(-50%, -50%);
   /* prevent interception of mouse click events */
@@ -184,11 +184,24 @@ button[disabled] {
 }
 
 #copyresult {
+  position: relative;
+}
+
+#copysuccess {
+  position: absolute;
   background-color: #7ac87a;
   margin-top: 3px;
   width: 48px;
   height: 48px;
   border-radius: 100px;
+  transform: translate(-50%);
+}
+
+#copyfail {
+  position: absolute;
+  color: hsl(360, 91%, 36%);
+  transform: translate(-50%, 70%);
+  white-space: nowrap;
 }
 
 .fade-out {
