--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ button[disabled] {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 54%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   /* prevent interception of mouse click events */
@@ -199,8 +199,10 @@ button[disabled] {
   white-space: nowrap;
 }
 
-#copyresult {
-  position: relative;
+#copytext {
+  position: absolute;
+  top: 44px;
+  background-color: #ffffffdf; /* A little bit of transparrency in case password overlaps */
 }
 
 #copysuccess {
@@ -210,13 +212,15 @@ button[disabled] {
   width: 48px;
   height: 48px;
   border-radius: 100px;
-  transform: translate(-50%);
 }
 
 #copyfail {
+  font-size: 1.5rem;
   position: absolute;
   color: hsl(360, 91%, 36%);
-  transform: translate(-50%, 70%);
+  background-color: #ececec;
+  padding: 8px;
+  border-radius: 100px;
   white-space: nowrap;
 }
 
