Added quick settings check box

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --text-color: hsl(206, 17%, 28%);
+  --highlight-color: hsl(360, 91%, 36%);
+  --form-color: hsl(180, 91%, 36%); /* complimentary color to highlight-color */
+  --error-color: hsl(0, 61%, 50%);
+}
+
 *,
 *::before,
 *::after {
@@ -27,7 +34,7 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: var(--text-color);
 }
 
 .card {
@@ -35,7 +42,7 @@ header {
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: var(--text-color);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -74,7 +81,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: var(--highlight-color);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -150,6 +157,7 @@ button[disabled] {
 }
 
 .form-group {
+  /* accent-color: var(--form-color); */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -181,7 +189,7 @@ button[disabled] {
 }
 
 #error {
-  color: hsl(360, 91%, 36%);
+  color: var(--error-color);
 }
 
 .copy {
@@ -217,7 +225,7 @@ button[disabled] {
 #copyfail {
   font-size: 1.5rem;
   position: absolute;
-  color: hsl(360, 91%, 36%);
+  color: var(--error-color);
   background-color: #ececec;
   padding: 8px;
   border-radius: 100px;
@@ -229,8 +237,14 @@ button[disabled] {
   transition: opacity 1.2s;
 }
 
+/* Hide while preserving space */
 .invisible {
   visibility: hidden;
+}
+
+/* Hide and collapse space */
+.hidden {
+  display: none;
 }
 
 /* Reduce the top margin on the slider row to put it closer to the numeric input */
